5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/2535/executions/1573_1332.log
== SUBMITION (2019-03-14 12:40:48) 
-- CODE:
aresta = 5
area = (3/2)*(3*aresta**2)**0,5
 
print(round(area, 4))
-- EXECUTION TIME:
0.202295
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:40:50) 
-- CODE:
aresta = 5
area = (3/2)*(3*aresta**2)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:42:31) 
-- CODE:
aresta = 5
area = (3/2)*((3*aresta**2)**0,5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.127763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = (3/2)*((3*aresta**2)**0,5)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:42:32) 
-- CODE:
aresta = 5
area = (3/2)*((3*aresta**2)**0,5)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*((3*aresta**2)**0,5)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:42:54) 
-- CODE:
aresta = float(5)
area = (3/2)*((3*aresta**2)**0,5)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*((3*aresta**2)**0,5)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:44:13) 
-- CODE:
a = 5
area = (3/2) * ((3*(a**2))**(0.5))
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:44:16) 
-- CODE:
a = 5
area = (3/2) * ((3*(a**2))**(0.5))
 
print(round(area, 4))
-- EXECUTION TIME:
0.145222
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:44:40) 
-- CODE:
a = 5
area = (3/2) * ((3*(a**2)))
area = area**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.195406
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.6066
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:46:31) 
-- CODE:
A = 3 * (75**0.5)
A = A/2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:46:38) 
-- CODE:
A = 3 * (75**0.5)
A = A/2
 
print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:46:39) 
-- CODE:
A = 3 * (75**0.5)
A = A/2
 
print(round(A, 4))
-- EXECUTION TIME:
0.152313
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:46:52) 
-- CODE:
A = 3 * (75**0.5)
A = A/2
 
print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:47:01) 
-- CODE:
A = 3 * (75**0.5)
A = A/2
 
print(A)
-- OUTPUT:
12.99038105676658
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:47:58) 
-- CODE:
A = (3/2) * (3**0.5) * 5**2
 
print(round(A, 4))
-- EXECUTION TIME:
0.189627
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
